@@ -11,6 +11,8 @@ PHP                                                                        NEWS
 - Fixed a bug in mysqli_stmt_execute() (type conversion with NULL values). (Georg)
 - Fixed segfault in mysqli_fetch_field_direct() when invalid field offset 
   is passed. (Tony)
+- Fixed bug #31710 (Wrong return values for mysqli_autocommit/commit/rollback).
+  (Georg)
 - Fixed bug #31684 (dio_tcsetattr(): misconfigured termios settings).
   (elod at itfais dot com)
 - Fixed bug #31699 (unserialize() float problem on non-English locales). (Ilia)
